Assignment 3/assignment3/2023CS10269_Assn3/lib/parser.output
   0  $accept : %entry% $end

   1  program : stmt_list EOF

   2  stmt_list : stmt SEMICOLON stmt_list
   3            | stmt SEMICOLON

   4  stmt : IDENTIFIER ASSIGN expr
   5       | IDENTIFIER LBRACKET expr RBRACKET ASSIGN expr
   6       | IDENTIFIER LBRACKET expr RBRACKET LBRACKET expr RBRACKET ASSIGN expr
   7       | IF expr THEN stmt ELSE stmt
   8       | FOR IDENTIFIER ASSIGN expr TO expr DO stmt
   9       | WHILE expr DO stmt
  10       | PRINT_IDENTIFIER
  11       | INPUT_FILE LPAREN STRING RPAREN
  12       | TYPE IDENTIFIER ASSIGN INPUT
  13       | TYPE INT_CONST IDENTIFIER ASSIGN INPUT
  14       | TYPE INT_CONST INT_CONST IDENTIFIER ASSIGN INPUT
  15       | RAISE IDENTIFIER
  16       | block

  17  block : LBRACE stmt_list RBRACE

  18  expr : scalar_expr

  19  scalar_expr : INT_CONST
  20              | FLOAT_CONST
  21              | BOOL_CONST
  22              | IDENTIFIER
  23              | IDENTIFIER LBRACKET scalar_expr RBRACKET
  24              | IDENTIFIER LBRACKET scalar_expr RBRACKET LBRACKET scalar_expr RBRACKET
  25              | MATRIX_MINOR IDENTIFIER LBRACKET scalar_expr RBRACKET LBRACKET scalar_expr RBRACKET
  26              | vector_expr
  27              | matrix_expr
  28              | scalar_expr PLUS scalar_expr
  29              | scalar_expr MINUS scalar_expr
  30              | scalar_expr TIMES scalar_expr
  31              | scalar_expr DIV scalar_expr
  32              | scalar_expr EXPONENT scalar_expr
  33              | scalar_expr MODULO scalar_expr
  34              | scalar_expr EQUAL scalar_expr
  35              | scalar_expr NOT_EQUAL scalar_expr
  36              | scalar_expr LESS scalar_expr
  37              | scalar_expr GREATER scalar_expr
  38              | scalar_expr LESS_EQUAL scalar_expr
  39              | scalar_expr GREATER_EQUAL scalar_expr
  40              | scalar_expr AND scalar_expr
  41              | scalar_expr OR scalar_expr
  42              | scalar_expr VECTOR_ADD scalar_expr
  43              | scalar_expr VECTOR_DOT scalar_expr
  44              | scalar_expr VECTOR_CROSS scalar_expr
  45              | scalar_expr VECTOR_SCAL scalar_expr
  46              | scalar_expr VECTOR_ANGLE scalar_expr
  47              | scalar_expr MATRIX_VECTOR_MUL scalar_expr
  48              | VECTOR_DIM scalar_expr
  49              | VECTOR_NORM scalar_expr
  50              | VECTOR_MAG scalar_expr
  51              | scalar_expr MATRIX_ADD scalar_expr
  52              | scalar_expr MATRIX_SCAL scalar_expr
  53              | scalar_expr MATRIX_MUL scalar_expr
  54              | MATRIX_DET scalar_expr
  55              | MATRIX_TR scalar_expr
  56              | MATRIX_ROWS scalar_expr
  57              | MATRIX_COLS scalar_expr
  58              | MATRIX_ADJ scalar_expr
  59              | MATRIX_INV scalar_expr
  60              | MATRIX_TRACE scalar_expr
  61              | NOT scalar_expr
  62              | NEG scalar_expr
  63              | ABS scalar_expr
  64              | SQRT scalar_expr
  65              | LPAREN scalar_expr RPAREN

  66  vector_expr : INT_CONST LBRACKET int_vector_element_list RBRACKET
  67              | INT_CONST LBRACKET float_vector_element_list RBRACKET

  68  matrix_expr : INT_CONST INT_CONST LBRACKET int_matrix_element_list RBRACKET
  69              | INT_CONST INT_CONST LBRACKET float_matrix_element_list RBRACKET

  70  int_vector_element_list : INT_CONST
  71                          | INT_CONST COMMA int_vector_element_list

  72  float_vector_element_list : FLOAT_CONST
  73                            | FLOAT_CONST COMMA float_vector_element_list

  74  int_matrix_element_list : LBRACKET int_vector_element_list RBRACKET
  75                          | LBRACKET int_vector_element_list RBRACKET COMMA int_matrix_element_list

  76  float_matrix_element_list : LBRACKET float_vector_element_list RBRACKET
  77                            | LBRACKET float_vector_element_list RBRACKET COMMA float_matrix_element_list

  78  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (78)

	IDENTIFIER  shift 3
	TYPE  shift 4
	RAISE  shift 5
	PRINT_IDENTIFIER  shift 6
	INPUT_FILE  shift 7
	IF  shift 8
	FOR  shift 9
	WHILE  shift 10
	LBRACE  shift 11
	.  error

	program  goto 12
	stmt_list  goto 13
	stmt  goto 14
	block  goto 15


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	stmt : IDENTIFIER . ASSIGN expr  (4)
	stmt : IDENTIFIER . LBRACKET expr RBRACKET ASSIGN expr  (5)
	stmt : IDENTIFIER . LBRACKET expr RBRACKET LBRACKET expr RBRACKET ASSIGN expr  (6)

	ASSIGN  shift 16
	LBRACKET  shift 17
	.  error


state 4
	stmt : TYPE . IDENTIFIER ASSIGN INPUT  (12)
	stmt : TYPE . INT_CONST IDENTIFIER ASSIGN INPUT  (13)
	stmt : TYPE . INT_CONST INT_CONST IDENTIFIER ASSIGN INPUT  (14)

	IDENTIFIER  shift 18
	INT_CONST  shift 19
	.  error


state 5
	stmt : RAISE . IDENTIFIER  (15)

	IDENTIFIER  shift 20
	.  error


state 6
	stmt : PRINT_IDENTIFIER .  (10)

	.  reduce 10


state 7
	stmt : INPUT_FILE . LPAREN STRING RPAREN  (11)

	LPAREN  shift 21
	.  error


state 8
	stmt : IF . expr THEN stmt ELSE stmt  (7)

	IDENTIFIER  shift 22
	INT_CONST  shift 23
	FLOAT_CONST  shift 24
	BOOL_CONST  shift 25
	NOT  shift 26
	VECTOR_MAG  shift 27
	VECTOR_NORM  shift 28
	VECTOR_DIM  shift 29
	MATRIX_DET  shift 30
	MATRIX_TR  shift 31
	MATRIX_ROWS  shift 32
	MATRIX_COLS  shift 33
	MATRIX_ADJ  shift 34
	MATRIX_INV  shift 35
	MATRIX_MINOR  shift 36
	MATRIX_TRACE  shift 37
	NEG  shift 38
	ABS  shift 39
	SQRT  shift 40
	LPAREN  shift 41
	.  error

	expr  goto 42
	scalar_expr  goto 43
	vector_expr  goto 44
	matrix_expr  goto 45


state 9
	stmt : FOR . IDENTIFIER ASSIGN expr TO expr DO stmt  (8)

	IDENTIFIER  shift 46
	.  error


state 10
	stmt : WHILE . expr DO stmt  (9)

	IDENTIFIER  shift 22
	INT_CONST  shift 23
	FLOAT_CONST  shift 24
	BOOL_CONST  shift 25
	NOT  shift 26
	VECTOR_MAG  shift 27
	VECTOR_NORM  shift 28
	VECTOR_DIM  shift 29
	MATRIX_DET  shift 30
	MATRIX_TR  shift 31
	MATRIX_ROWS  shift 32
	MATRIX_COLS  shift 33
	MATRIX_ADJ  shift 34
	MATRIX_INV  shift 35
	MATRIX_MINOR  shift 36
	MATRIX_TRACE  shift 37
	NEG  shift 38
	ABS  shift 39
	SQRT  shift 40
	LPAREN  shift 41
	.  error

	expr  goto 47
	scalar_expr  goto 43
	vector_expr  goto 44
	matrix_expr  goto 45


state 11
	block : LBRACE . stmt_list RBRACE  (17)

	IDENTIFIER  shift 3
	TYPE  shift 4
	RAISE  shift 5
	PRINT_IDENTIFIER  shift 6
	INPUT_FILE  shift 7
	IF  shift 8
	FOR  shift 9
	WHILE  shift 10
	LBRACE  shift 11
	.  error

	stmt_list  goto 48
	stmt  goto 14
	block  goto 15


state 12
	%entry% : '\001' program .  (78)

	.  reduce 78


state 13
	program : stmt_list . EOF  (1)

	EOF  shift 49
	.  error


state 14
	stmt_list : stmt . SEMICOLON stmt_list  (2)
	stmt_list : stmt . SEMICOLON  (3)

	SEMICOLON  shift 50
	.  error


state 15
	stmt : block .  (16)

	.  reduce 16


state 16
	stmt : IDENTIFIER ASSIGN . expr  (4)

	IDENTIFIER  shift 22
	INT_CONST  shift 23
	FLOAT_CONST  shift 24
	BOOL_CONST  shift 25
	NOT  shift 26
	VECTOR_MAG  shift 27
	VECTOR_NORM  shift 28
	VECTOR_DIM  shift 29
	MATRIX_DET  shift 30
	MATRIX_TR  shift 31
	MATRIX_ROWS  shift 32
	MATRIX_COLS  shift 33
	MATRIX_ADJ  shift 34
	MATRIX_INV  shift 35
	MATRIX_MINOR  shift 36
	MATRIX_TRACE  shift 37
	NEG  shift 38
	ABS  shift 39
	SQRT  shift 40
	LPAREN  shift 41
	.  error

	expr  goto 51
	scalar_expr  goto 43
	vector_expr  goto 44
	matrix_expr  goto 45


state 17
	stmt : IDENTIFIER LBRACKET . expr RBRACKET ASSIGN expr  (5)
	stmt : IDENTIFIER LBRACKET . expr RBRACKET LBRACKET expr RBRACKET ASSIGN expr  (6)

	IDENTIFIER  shift 22
	INT_CONST  shift 23
	FLOAT_CONST  shift 24
	BOOL_CONST  shift 25
	NOT  shift 26
	VECTOR_MAG  shift 27
	VECTOR_NORM  shift 28
	VECTOR_DIM  shift 29
	MATRIX_DET  shift 30
	MATRIX_TR  shift 31
	MATRIX_ROWS  shift 32
	MATRIX_COLS  shift 33
	MATRIX_ADJ  shift 34
	MATRIX_INV  shift 35
	MATRIX_MINOR  shift 36
	MATRIX_TRACE  shift 37
	NEG  shift 38
	ABS  shift 39
	SQRT  shift 40
	LPAREN  shift 41
	.  error

	expr  goto 52
	scalar_expr  goto 43
	vector_expr  goto 44
	matrix_expr  goto 45


state 18
	stmt : TYPE IDENTIFIER . ASSIGN INPUT  (12)

	ASSIGN  shift 53
	.  error


state 19
	stmt : TYPE INT_CONST . IDENTIFIER ASSIGN INPUT  (13)
	stmt : TYPE INT_CONST . INT_CONST IDENTIFIER ASSIGN INPUT  (14)

	IDENTIFIER  shift 54
	INT_CONST  shift 55
	.  error


state 20
	stmt : RAISE IDENTIFIER .  (15)

	.  reduce 15


state 21
	stmt : INPUT_FILE LPAREN . STRING RPAREN  (11)

	STRING  shift 56
	.  error


state 22
	scalar_expr : IDENTIFIER .  (22)
	scalar_expr : IDENTIFIER . LBRACKET scalar_expr RBRACKET  (23)
	scalar_expr : IDENTIFIER . LBRACKET scalar_expr RBRACKET LBRACKET scalar_expr RBRACKET  (24)

	LBRACKET  shift 57
	MATRIX_VECTOR_MUL  reduce 22
	TO  reduce 22
	DO  reduce 22
	PLUS  reduce 22
	MINUS  reduce 22
	TIMES  reduce 22
	DIV  reduce 22
	MODULO  reduce 22
	EXPONENT  reduce 22
	EQUAL  reduce 22
	NOT_EQUAL  reduce 22
	LESS  reduce 22
	GREATER  reduce 22
	LESS_EQUAL  reduce 22
	GREATER_EQUAL  reduce 22
	AND  reduce 22
	OR  reduce 22
	VECTOR_ADD  reduce 22
	VECTOR_DOT  reduce 22
	VECTOR_CROSS  reduce 22
	VECTOR_SCAL  reduce 22
	VECTOR_ANGLE  reduce 22
	MATRIX_ADD  reduce 22
	MATRIX_SCAL  reduce 22
	MATRIX_MUL  reduce 22
	SEMICOLON  reduce 22
	THEN  reduce 22
	ELSE  reduce 22
	RPAREN  reduce 22
	RBRACKET  reduce 22


state 23
	scalar_expr : INT_CONST .  (19)
	vector_expr : INT_CONST . LBRACKET int_vector_element_list RBRACKET  (66)
	vector_expr : INT_CONST . LBRACKET float_vector_element_list RBRACKET  (67)
	matrix_expr : INT_CONST . INT_CONST LBRACKET int_matrix_element_list RBRACKET  (68)
	matrix_expr : INT_CONST . INT_CONST LBRACKET float_matrix_element_list RBRACKET  (69)

	INT_CONST  shift 58
	LBRACKET  shift 59
	MATRIX_VECTOR_MUL  reduce 19
	TO  reduce 19
	DO  reduce 19
	PLUS  reduce 19
	MINUS  reduce 19
	TIMES  reduce 19
	DIV  reduce 19
	MODULO  reduce 19
	EXPONENT  reduce 19
	EQUAL  reduce 19
	NOT_EQUAL  reduce 19
	LESS  reduce 19
	GREATER  reduce 19
	LESS_EQUAL  reduce 19
	GREATER_EQUAL  reduce 19
	AND  reduce 19
	OR  reduce 19
	VECTOR_ADD  reduce 19
	VECTOR_DOT  reduce 19
	VECTOR_CROSS  reduce 19
	VECTOR_SCAL  reduce 19
	VECTOR_ANGLE  reduce 19
	MATRIX_ADD  reduce 19
	MATRIX_SCAL  reduce 19
	MATRIX_MUL  reduce 19
	SEMICOLON  reduce 19
	THEN  reduce 19
	ELSE  reduce 19
	RPAREN  reduce 19
	RBRACKET  reduce 19


state 24
	scalar_expr : FLOAT_CONST .  (20)

	.  reduce 20


state 25
	scalar_expr : BOOL_CONST .  (21)

	.  reduce 21


state 26
	scalar_expr : NOT . scalar_expr  (61)

	IDENTIFIER  shift 22
	INT_CONST  shift 23
	FLOAT_CONST  shift 24
	BOOL_CONST  shift 25
	NOT  shift 26
	VECTOR_MAG  shift 27
	VECTOR_NORM  shift 28
	VECTOR_DIM  shift 29
	MATRIX_DET  shift 30
	MATRIX_TR  shift 31
	MATRIX_ROWS  shift 32
	MATRIX_COLS  shift 33
	MATRIX_ADJ  shift 34
	MATRIX_INV  shift 35
	MATRIX_MINOR  shift 36
	MATRIX_TRACE  shift 37
	NEG  shift 38
	ABS  shift 39
	SQRT  shift 40
	LPAREN  shift 41
	.  error

	scalar_expr  goto 60
	vector_expr  goto 44
	matrix_expr  goto 45


state 27
	scalar_expr : VECTOR_MAG . scalar_expr  (50)

	IDENTIFIER  shift 22
	INT_CONST  shift 23
	FLOAT_CONST  shift 24
	BOOL_CONST  shift 25
	NOT  shift 26
	VECTOR_MAG  shift 27
	VECTOR_NORM  shift 28
	VECTOR_DIM  shift 29
	MATRIX_DET  shift 30
	MATRIX_TR  shift 31
	MATRIX_ROWS  shift 32
	MATRIX_COLS  shift 33
	MATRIX_ADJ  shift 34
	MATRIX_INV  shift 35
	MATRIX_MINOR  shift 36
	MATRIX_TRACE  shift 37
	NEG  shift 38
	ABS  shift 39
	SQRT  shift 40
	LPAREN  shift 41
	.  error

	scalar_expr  goto 61
	vector_expr  goto 44
	matrix_expr  goto 45


state 28
	scalar_expr : VECTOR_NORM . scalar_expr  (49)

	IDENTIFIER  shift 22
	INT_CONST  shift 23
	FLOAT_CONST  shift 24
	BOOL_CONST  shift 25
	NOT  shift 26
	VECTOR_MAG  shift 27
	VECTOR_NORM  shift 28
	VECTOR_DIM  shift 29
	MATRIX_DET  shift 30
	MATRIX_TR  shift 31
	MATRIX_ROWS  shift 32
	MATRIX_COLS  shift 33
	MATRIX_ADJ  shift 34
	MATRIX_INV  shift 35
	MATRIX_MINOR  shift 36
	MATRIX_TRACE  shift 37
	NEG  shift 38
	ABS  shift 39
	SQRT  shift 40
	LPAREN  shift 41
	.  error

	scalar_expr  goto 62
	vector_expr  goto 44
	matrix_expr  goto 45


state 29
	scalar_expr : VECTOR_DIM . scalar_expr  (48)

	IDENTIFIER  shift 22
	INT_CONST  shift 23
	FLOAT_CONST  shift 24
	BOOL_CONST  shift 25
	NOT  shift 26
	VECTOR_MAG  shift 27
	VECTOR_NORM  shift 28
	VECTOR_DIM  shift 29
	MATRIX_DET  shift 30
	MATRIX_TR  shift 31
	MATRIX_ROWS  shift 32
	MATRIX_COLS  shift 33
	MATRIX_ADJ  shift 34
	MATRIX_INV  shift 35
	MATRIX_MINOR  shift 36
	MATRIX_TRACE  shift 37
	NEG  shift 38
	ABS  shift 39
	SQRT  shift 40
	LPAREN  shift 41
	.  error

	scalar_expr  goto 63
	vector_expr  goto 44
	matrix_expr  goto 45


state 30
	scalar_expr : MATRIX_DET . scalar_expr  (54)

	IDENTIFIER  shift 22
	INT_CONST  shift 23
	FLOAT_CONST  shift 24
	BOOL_CONST  shift 25
	NOT  shift 26
	VECTOR_MAG  shift 27
	VECTOR_NORM  shift 28
	VECTOR_DIM  shift 29
	MATRIX_DET  shift 30
	MATRIX_TR  shift 31
	MATRIX_ROWS  shift 32
	MATRIX_COLS  shift 33
	MATRIX_ADJ  shift 34
	MATRIX_INV  shift 35
	MATRIX_MINOR  shift 36
	MATRIX_TRACE  shift 37
	NEG  shift 38
	ABS  shift 39
	SQRT  shift 40
	LPAREN  shift 41
	.  error

	scalar_expr  goto 64
	vector_expr  goto 44
	matrix_expr  goto 45


state 31
	scalar_expr : MATRIX_TR . scalar_expr  (55)

	IDENTIFIER  shift 22
	INT_CONST  shift 23
	FLOAT_CONST  shift 24
	BOOL_CONST  shift 25
	NOT  shift 26
	VECTOR_MAG  shift 27
	VECTOR_NORM  shift 28
	VECTOR_DIM  shift 29
	MATRIX_DET  shift 30
	MATRIX_TR  shift 31
	MATRIX_ROWS  shift 32
	MATRIX_COLS  shift 33
	MATRIX_ADJ  shift 34
	MATRIX_INV  shift 35
	MATRIX_MINOR  shift 36
	MATRIX_TRACE  shift 37
	NEG  shift 38
	ABS  shift 39
	SQRT  shift 40
	LPAREN  shift 41
	.  error

	scalar_expr  goto 65
	vector_expr  goto 44
	matrix_expr  goto 45


state 32
	scalar_expr : MATRIX_ROWS . scalar_expr  (56)

	IDENTIFIER  shift 22
	INT_CONST  shift 23
	FLOAT_CONST  shift 24
	BOOL_CONST  shift 25
	NOT  shift 26
	VECTOR_MAG  shift 27
	VECTOR_NORM  shift 28
	VECTOR_DIM  shift 29
	MATRIX_DET  shift 30
	MATRIX_TR  shift 31
	MATRIX_ROWS  shift 32
	MATRIX_COLS  shift 33
	MATRIX_ADJ  shift 34
	MATRIX_INV  shift 35
	MATRIX_MINOR  shift 36
	MATRIX_TRACE  shift 37
	NEG  shift 38
	ABS  shift 39
	SQRT  shift 40
	LPAREN  shift 41
	.  error

	scalar_expr  goto 66
	vector_expr  goto 44
	matrix_expr  goto 45


state 33
	scalar_expr : MATRIX_COLS . scalar_expr  (57)

	IDENTIFIER  shift 22
	INT_CONST  shift 23
	FLOAT_CONST  shift 24
	BOOL_CONST  shift 25
	NOT  shift 26
	VECTOR_MAG  shift 27
	VECTOR_NORM  shift 28
	VECTOR_DIM  shift 29
	MATRIX_DET  shift 30
	MATRIX_TR  shift 31
	MATRIX_ROWS  shift 32
	MATRIX_COLS  shift 33
	MATRIX_ADJ  shift 34
	MATRIX_INV  shift 35
	MATRIX_MINOR  shift 36
	MATRIX_TRACE  shift 37
	NEG  shift 38
	ABS  shift 39
	SQRT  shift 40
	LPAREN  shift 41
	.  error

	scalar_expr  goto 67
	vector_expr  goto 44
	matrix_expr  goto 45


state 34
	scalar_expr : MATRIX_ADJ . scalar_expr  (58)

	IDENTIFIER  shift 22
	INT_CONST  shift 23
	FLOAT_CONST  shift 24
	BOOL_CONST  shift 25
	NOT  shift 26
	VECTOR_MAG  shift 27
	VECTOR_NORM  shift 28
	VECTOR_DIM  shift 29
	MATRIX_DET  shift 30
	MATRIX_TR  shift 31
	MATRIX_ROWS  shift 32
	MATRIX_COLS  shift 33
	MATRIX_ADJ  shift 34
	MATRIX_INV  shift 35
	MATRIX_MINOR  shift 36
	MATRIX_TRACE  shift 37
	NEG  shift 38
	ABS  shift 39
	SQRT  shift 40
	LPAREN  shift 41
	.  error

	scalar_expr  goto 68
	vector_expr  goto 44
	matrix_expr  goto 45


state 35
	scalar_expr : MATRIX_INV . scalar_expr  (59)

	IDENTIFIER  shift 22
	INT_CONST  shift 23
	FLOAT_CONST  shift 24
	BOOL_CONST  shift 25
	NOT  shift 26
	VECTOR_MAG  shift 27
	VECTOR_NORM  shift 28
	VECTOR_DIM  shift 29
	MATRIX_DET  shift 30
	MATRIX_TR  shift 31
	MATRIX_ROWS  shift 32
	MATRIX_COLS  shift 33
	MATRIX_ADJ  shift 34
	MATRIX_INV  shift 35
	MATRIX_MINOR  shift 36
	MATRIX_TRACE  shift 37
	NEG  shift 38
	ABS  shift 39
	SQRT  shift 40
	LPAREN  shift 41
	.  error

	scalar_expr  goto 69
	vector_expr  goto 44
	matrix_expr  goto 45


state 36
	scalar_expr : MATRIX_MINOR . IDENTIFIER LBRACKET scalar_expr RBRACKET LBRACKET scalar_expr RBRACKET  (25)

	IDENTIFIER  shift 70
	.  error


state 37
	scalar_expr : MATRIX_TRACE . scalar_expr  (60)

	IDENTIFIER  shift 22
	INT_CONST  shift 23
	FLOAT_CONST  shift 24
	BOOL_CONST  shift 25
	NOT  shift 26
	VECTOR_MAG  shift 27
	VECTOR_NORM  shift 28
	VECTOR_DIM  shift 29
	MATRIX_DET  shift 30
	MATRIX_TR  shift 31
	MATRIX_ROWS  shift 32
	MATRIX_COLS  shift 33
	MATRIX_ADJ  shift 34
	MATRIX_INV  shift 35
	MATRIX_MINOR  shift 36
	MATRIX_TRACE  shift 37
	NEG  shift 38
	ABS  shift 39
	SQRT  shift 40
	LPAREN  shift 41
	.  error

	scalar_expr  goto 71
	vector_expr  goto 44
	matrix_expr  goto 45


state 38
	scalar_expr : NEG . scalar_expr  (62)

	IDENTIFIER  shift 22
	INT_CONST  shift 23
	FLOAT_CONST  shift 24
	BOOL_CONST  shift 25
	NOT  shift 26
	VECTOR_MAG  shift 27
	VECTOR_NORM  shift 28
	VECTOR_DIM  shift 29
	MATRIX_DET  shift 30
	MATRIX_TR  shift 31
	MATRIX_ROWS  shift 32
	MATRIX_COLS  shift 33
	MATRIX_ADJ  shift 34
	MATRIX_INV  shift 35
	MATRIX_MINOR  shift 36
	MATRIX_TRACE  shift 37
	NEG  shift 38
	ABS  shift 39
	SQRT  shift 40
	LPAREN  shift 41
	.  error

	scalar_expr  goto 72
	vector_expr  goto 44
	matrix_expr  goto 45


state 39
	scalar_expr : ABS . scalar_expr  (63)
